# llm_geometry

./: .gitignore  README.md  collect_stats.py  pyproject.toml  requirements.txt  testing.ipynb
experiments/: testing.ipynb
scripts/: build_wikitext_block.py  collect_whitening_stats.py
src/geometry/: collect_stats.py  coords.py  diffusion.py  functional_space.py  graph.py  hooks.py
src/geometry/data/: wikitext.py
