[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-geometry"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers",
  "datasets",
  "numpy",
  "scipy",
  "einops",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
